fixed dataGrid height and wrap

--- a/packages/shared-ui/src/components/Shared/DataGrid/DataGrid.module.css
+++ b/packages/shared-ui/src/components/Shared/DataGrid/DataGrid.module.css
@@ -8,7 +8,7 @@
 }
 
 .agContainer.ag-theme-alpine {
-  --ag-row-height: 36px;
+  /* --ag-row-height: 36px; */
   --ag-header-height: 40px;
   --ag-font-size: 0.9rem;
 }
@@ -16,8 +16,8 @@
 .agContainer :global(.ag-header),
 .agContainer :global(.ag-header-cell),
 .agContainer :global(.ag-header-row) {
-  height: var(--ag-header-height) !important;
-  min-height: var(--ag-header-height) !important;
+  /* height: var(--ag-header-height) !important;
+  min-height: var(--ag-header-height) !important; */
   background: var(--ag-header-bg, #f5f5f5);
 }
 
@@ -29,7 +29,7 @@
   border-right: 1px solid #d0d0d0 !important;
   font-size: 0.8rem !important;
   line-height: 1.1;
-
+  background-color: white !important;
   display: flex;
   align-items: center;
 }
@@ -45,7 +45,7 @@
   display: flex;
   align-items: center;
   height: auto;
-  min-height: var(--ag-row-height);
+  /* min-height: var(--ag-row-height); */
   padding: 0 !important;
 }
 
@@ -53,7 +53,7 @@
 .cellEditorBox {
   width: 100%;
   height: auto;                  
-  min-height: var(--ag-row-height);
+  /* min-height: var(--ag-row-height); */
   padding: 0;
   display: flex;
   align-items: center;
@@ -71,7 +71,7 @@
 .cellEditorInner {
   width: 100%;
   height: auto;
-  min-height: var(--ag-row-height); 
+  /* min-height: var(--ag-row-height);  */
   display: flex;
   align-items: center;
   box-sizing: border-box;
@@ -124,7 +124,7 @@
 .agContainer :global(.ag-cell.ag-cell-inline-editing.ag-cell-focus) {
   box-shadow: none !important;
   outline: none !important;
-  border-color: transparent !important;
+  /* border-color: transparent !important; */
 }
 
 .agContainer :global(.ag-cell),
@@ -141,7 +141,7 @@
 
 @media (min-width: 1920px) {
   .agContainer.ag-theme-alpine {
-    --ag-row-height: 38px;
+    /* --ag-row-height: 38px; */
     --ag-header-height: 44px;
     --ag-font-size: 1rem;
   }
@@ -158,7 +158,7 @@
 
 @media (max-width: 1599px) {
   .agContainer.ag-theme-alpine {
-    --ag-row-height: 26px;
+    /* --ag-row-height: 15px !important; */
     --ag-header-height: 32px;
     --ag-font-size: 11px;
   }
@@ -178,7 +178,7 @@
 
 @media (max-width: 1024px) {
   .agContainer.ag-theme-alpine {
-    --ag-row-height: 24px;
+    /* --ag-row-height: 24px; */
     --ag-header-height: 30px;
     --ag-font-size: 10px;
   }
@@ -198,7 +198,7 @@
 
 @media (max-width: 834px) {
   .agContainer.ag-theme-alpine {
-    --ag-row-height: 22px;
+    /* --ag-row-height: 22px; */
     --ag-header-height: 26px;
     --ag-font-size: 9px;
   }
